<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout_task_root"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true">

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activity=".LearnJavaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTask"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?android:colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/settings_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:onClick="settingsOnClick"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/action_settings"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin"
                    android:src="@drawable/settings_icon" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Actual content of the activity -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/taskMainLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/hideShowSolutionLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskComponents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:fastScrollEnabled="false"
                android:layout_centerInParent="true"
                android:visibility="gone"
                tools:visibility="visible"/>

            <!-- scroll view of the task solution components -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/solutionComponents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:fastScrollEnabled="false"
                android:layout_centerInParent="true"
                android:visibility="gone"
                tools:visibility="visible"/>

            <!-- loading indicator -->
            <ProgressBar
                android:id="@+id/taskProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"/>
        </RelativeLayout>

        <!-- Hide and show solution prompts -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hideShowSolutionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:onClick="hideShowSolutionOnClick"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/taskCompletedCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskMainLayout">

            <ImageView
                android:id="@+id/hideShowSolutionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/show_solution"
                app:layout_constraintBottom_toTopOf="@id/sep2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sep1"
                app:srcCompat="@drawable/right_arrow" />

            <TextView
                android:id="@+id/hideShowSolutionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/show_solution"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintBottom_toTopOf="@id/sep2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sep1" />

            <View
                android:id="@+id/sep2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="?separatorBackgroundColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <include
                android:id="@+id/sep1"
                layout="@layout/view_separator_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/taskCompletedCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/mark_task_as_completed"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintBottom_toTopOf="@+id/closeTaskButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/closeTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="closeTaskOnClick"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:minWidth="100dp"
            android:textAlignment="center"
            android:layout_margin="@dimen/margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

<com.google.android.material.navigation.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/view_nav_header"
    app:menu="@menu/learn_java_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>